[package]
name = "solnado"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solnado"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ark-groth16 = "0.3.0"  # Groth16 proof verifier
ark-bn254 = "0.4.0"
solana-poseidon = "2.2.0"
ark-ff = "0.4.0"
ark-ec = "0.3.0"
ark-serialize = "0.3.0"
ark-snark = { version = "^0.3.0", default-features = false }


