[package]
name = "solnado"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solnado"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ark-bn254 = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-serialize = "0.3.0"
ark-snark = { version = "^0.3.0", default-features = false }
solana-poseidon = "2.1.0"
groth16-solana = "0.0.3"
hex = "0.4"
num-bigint= "0.4.6"
num-traits = "0.2.19"
base64 = "0.21" 



